@@ -1,4 +1,5 @@
 Changes towards version 0.8:
+- Cleaning up DoModifyShips() - SvdB
 - Added Valgrind suppression file, from Louis Delacroix
 - Fix several memory leaks, from Loius Delacroix
 - Some cleanups / warnings fixes, from Louis Delacroix
